# qq-bot

./: .gitignore  config.yml  main.py  pyproject.toml  requirements.txt  test.py  test.txt  utils.py
modules/: automatically-join-group.py  config.py  minecraft.py  twenty-translations.py
modules/CloudMusic/: __init__.py
modules/minecraft/: MinecraftApi.py  __init__.py  config.yml
